--- a/notes/lec10_Classifiers.Rmd
+++ b/notes/lec10_Classifiers.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Lec 07: Discriminant Analysis'
+title: 'Lec 10: Classifiers'
 author: "MATH 456 - Spring 2016"
 output:
   html_document:
