--- a/notes/lec10_Classifiers.Rmd
+++ b/notes/lec10_Classifiers.Rmd
@@ -12,7 +12,7 @@ output:
 library(knitr); library(rmarkdown);library(ggplot2)
 library(xtable); library(dplyr)
 options(xtable.comment = FALSE)
-opts_chunk$set(warning=FALSE, message=FALSE) 
+opts_chunk$set(warning=FALSE, message=FALSE, fig.height=4, fig.width=4, fig.align='center') 
 ```
 
 ```{r results="asis", echo=FALSE}
@@ -28,9 +28,15 @@ Skip/skim: 11.9-11.11
 
 Algorithm specific information is interspersed throughout the lecture notes. 
 
+* Lots of external reading/references
+* Easy to go down the rabbit hole on this stuff! 
+* Read/skim around to better understand these methods, but know that we could
+  have spent easily an entire semester on machine learning algorithms. 
+* This is just an introduction!
+
 # Introduction to Classifiers
 We will be discussing the following 6 classifying algorithms. These are also
-sometimes called _Machine Learning_ algorithms. They are simply methods to
+sometimes called _Machine Learning_ (ML) algorithms. They are simply methods to
 build a model by learning from the relationships within the data. 
 
 * Logistic Regression
@@ -41,13 +47,24 @@ build a model by learning from the relationships within the data.
 * k-nearest neighbors
 
 For an idea of how many algorithms are out there: http://topepo.github.io/caret/modelList.html 
-Many of the algorithms listed are similar in theory, but with different penalties. 
+Many of the algorithms listed are similar in theory, but with different penalty functions. 
+
+Most ML algorithms will use, in some way, every variable that you give it access
+to. To reduce model complexity and to reduce the chance of overfitting many models
+apply a _penalty_ to the variable that diminishes their effect on the outcome, 
+or reduces their chance of being included into the model. 
+
+> Overfitting occurs when a statistical model describes random error or noise 
+> instead of the underlying relationship. Overfitting generally occurs when a 
+> model is excessively complex, such as having too many parameters relative to
+> the number of observations.
+(Ref: https://en.wikipedia.org/wiki/Overfitting)
+
 
 ### Machine learning in R: the `caret` package
 
 We will be using the `caret` package in R to conduct all of our model building. 
-Please read the vignette for this package. It is a small paper (10 pages) and 
-will serve as your first point of reference. 
+Please read this small vignette for this package. 
 
 https://cran.r-project.org/web/packages/caret/vignettes/caret.pdf
 
@@ -56,10 +73,18 @@ library(caret)
 ```
 
 Other packages you will need to install are: `pROC`, `caTools`, `bnclassify`,
-`mda`, `party`. 
+`mda`, `party`, `rpart.plot`, `rattle`, `penalizedLDA`.  
 
-Typically you don't need pre-install these packages. You will be prompted to
-install them when you use their corresponding classifying algorithm. 
+* Typically don't need pre-install these 
+* You're prompted to install them when you use an algorithm that needs them
+* Once installed, they will automatically load as needed. 
+
+If you want to use classifying algorithms other than the ones we have discussed
+here, these references will be useful:
+
+* http://topepo.github.io/caret/bytag.html
+* http://artax.karlin.mff.cuni.cz/r-help/library/caret/html/train.html
+
 
 ### Cross-Validation
 Many of these algorithms have _tuning parameters_ that have to be optimized. 
@@ -82,7 +107,7 @@ ctrl <- trainControl(method="repeatedcv", repeats=3,
 
 The `classProbs=TRUE` argument tells the function to calculate the probabilities
 of being in each class (depressed or not depressed), and to provide a summary
-in the end that is specific to Two classes (similar to the confusion matrix). 
+information specific to two classes (confusion matrix). 
 
 ### Fitting (Training) the model
 The workhorse in the caret package is the `train()` function.
@@ -101,7 +126,7 @@ train(y ~ . ,
 * `data` is the data set used to train the model on
 * `method` is the type of machine learning algorithm used
 * `preProc` is the type of pre-processing that you want to be done
-* `metric` is the performance metric that you want to optimze
+* `metric` is the performance metric that you want to optimize
 * `trControl` is the type of training control you want to implement. 
 
 
@@ -128,7 +153,8 @@ factor variables were being treated appropriately. This is also the step that
 you would conduct a PCA or create aggregate scales like CESD (which was already
 created for us). 
 
-However, specifically we need to ensure that R knows `cases` is a binary class variable. 
+However, specifically we need to ensure that R knows `cases` is a binary class variable
+**with Depressed as the outcome of interest**. Ensure correct alphabetical order. 
 ```{r}
 depress$cases <- factor(depress$cases, labels=c("NotDepressed", "YesDepressed"))
 ```
@@ -178,11 +204,10 @@ depress$educat <- recode(depress$educat,
 table(depress$educat)
 ```
 
-
-Similarily I will look at the average value for all the 0/1 indicator variables in 
+Similarly I will look at the average value for all the 0/1 indicator variables in 
 the data set to get an idea of the proportion of 1's. If any have a very low percent
 of events (1's) in the data we will have to be mindful of how the algorithms are
-performing with that varible in the model. 
+performing with that variable in the model. 
 ```{r}
 sapply(depress[,c('sex', 'drink', 'regdoc', 'treat', 'beddays', 'acuteill', 'chronill')], mean)
 ```
@@ -210,7 +235,7 @@ the testing and training samples while stratifying on the outcome.
 set.seed(1067)
 inTrain <- createDataPartition(y=depress$cases, p=.7, list=FALSE)
 train <- depress[inTrain,];dim(train)
-test <- depress[-inTrain,];dim(test)
+test  <- depress[-inTrain,];dim(test)
 ```
 
 This is advantageous in that it ensures the relative proportion of the 
@@ -227,7 +252,7 @@ Now we are ready to build our models on the training data.
 ## Logistic Regression
 http://topepo.github.io/caret/Logistic_Regression.html
 
-There are several different algorithms to perform a "flavor" of logisic 
+There are several different algorithms to perform a "flavor" of logistic 
 regression analysis. We are going to use the `LogitBoost` algorithm. 
 
 > Boosting methods have been originally proposed as ensemble methods,
@@ -267,19 +292,21 @@ plot(LogReg)
 http://master.bioconductor.org/help/course-materials/2003/Milan/Lectures/anestisMilan3.pdf 
 
 
-
 ## Discriminant analysis
-http://topepo.github.io/caret/Discriminant_Analysis.html
 
-<span style="color:red">explain this model</span>
+* Afifi Ch 11 introduces _Linear_ Discriminant analyses
+* Finds a combination of features that separates two events
+* Not all combinations are linear. http://topepo.github.io/caret/Discriminant_Analysis.html
+* 
 
-Here I test out several version of the LDA algorithm. 
+Here I test out several discriminant function algorithms: 
 
-* `LDA.1` uses the standard Linear Discriminant Analysis algorithm 
-   (`method =lda`), there are no tuning parameters. 
-* `LDA.2` uses a Penalized Discriminant analysis algorithm (`method=pda`)
-   that includes a tuning parameter $\lambda$ that controls the amount of
-   penalty that is applied to each regression coefficient $\beta$. 
+* `LDA.1` uses the a Linear Discriminant Analysis algorithm (`method =lda2`)
+   that includes a tuning parameter to control the number of discriminant functions. 
+* `LDA.2` uses a Penalized Linear Discriminant analysis algorithm (`method=PenalizedLDA`)
+   that is designed for situations in which there are many higly correlated predictors. 
+   Specifically I chose one that applied a direct penalty to the $\beta$ coefficients
+   and the number of discriminant functions used. http://projecteuclid.org/euclid.aos/1176324456 
 * `LDA.3` includes a stepwise feature selection procedure (`method=stepLDA`)
 
 The stepwise LDA procedure is _very_ verbose (it creates a lot of output)
@@ -288,13 +315,17 @@ in the code chunk header).
 ```{r, results='hide', cache=TRUE}
 LDA.1 <- train(cases ~ . ,
                 data=train, 
-                method="lda", 
+                method="lda2", 
                 preProc = c("center", "scale"), 
                 metric = "ROC",
                 trControl = ctrl)
+
+ctrl <- trainControl(method="repeatedcv", repeats=3)
+
+
 LDA.2 <- train(cases ~ . ,
                 data=train, 
-                method="pda", 
+                method="PenalizedLDA", 
                 preProc = c("center", "scale"), 
                 metric = "ROC",
                 trControl = ctrl)
@@ -311,6 +342,10 @@ Results?
 LDA.1
 LDA.2
 LDA.3
+```
+
+```{r}
+plot(LDA.2)
 ```
 
 
@@ -338,31 +373,81 @@ NB
 ```
 
 This plot shows you the change in AUC as a function of if the algorithm was
-using a gaussian or a non-parametric kernal. 
+using a Gaussian or a non-parametric kernel. 
 ```{r}
 plot(NB)
 ```
 
+
 ## Decision Trees
 <span style="color:red">explain this model</span>
+
+Tree based methods are:
+
+* Best when the relationship between the features and the response are complex
+    - lot of non-linear terms and interactions. 
+* Easy to explain & display graphically
+* Mimics human decision making
+* Tend to not have the same level of predictive accuracy as classical approaches. 
+* Non-parametric
+* Can over-fit the data more easily than other methods. 
+
+
+### General Algorithm/Process
+1. Find the variable split that best separates the categories of the response variable
+2. Divide the data into two subsets based on that split
+3. Within each subset, find the next variable that best separates the data into two categories. 
+
+The goal is to minimize the residual error. Technically trees can be built so tall that
+each observation is perfectly predicted. This is called _over fitting_. This can be avoided
+by _pruning_ trees back (simplifying the tree). 
+
+* The level of pruning is a tuning parameter (`complexity`)
+* Optimal complexity parameter can be determined by CV. 
+
+
+References & Readings  
+* https://en.wikipedia.org/wiki/Decision_tree_learning 
+* https://rpubs.com/ryankelly/dtrees 
+* http://trevorstephens.com/post/72923766261/titanic-getting-started-with-r-part-3-decision
 
 
 ```{r, cache=TRUE}
 DT <- train(cases ~ . ,
                 data=train, 
-                method="ctree", 
+                method="rpart", 
                 metric = "ROC",
                 trControl = ctrl)
 ```
 
 ```{r}
 DT
-plot(DT$finalModel)
 ```
+
+Visualize the decision tree. 
+```{r}
+library(rpart.plot)
+plot(DT$finalModel, cex=.2)
+```
+
+Tree based models also provide a measure on the importance of each candidate
+variable. These can be visualized using a **Variable Importance Plot**.
+```{r}
+plot(varImp(DT))
+```
+
+This echo's the decision tree plot in that top three primary variables important
+in predicting depression is the number of days spent in bed, the level of 
+general health, and employment status (specifically if they're unemployed)
+
 
 ## Random Forests
 <span style="color:red">explain this model</span>
 
+A random forest grows a large number of decision trees in order to improve
+classification rate. 
+
+http://trevorstephens.com/post/73770963794/titanic-getting-started-with-r-part-5-random
 
 ```{r, cache=TRUE}
 RF <- train(cases ~ . ,
@@ -371,6 +456,12 @@ RF <- train(cases ~ . ,
                 metric = "ROC",
                 trControl = ctrl)
 ```
+
+```{r}
+plot(RF)
+plot(varImp(RF))
+```
+
 
 ## k-nearest neighbors
 <span style="color:red">explain this model</span>
@@ -395,35 +486,61 @@ plot(kNN)
 
 
 # Compare algorithm performance
-On the hold-out testing data set. 
-
-Here I show how to create a confusion matrix using the predicted
-values generated by the different algorithms. I will only show
-two examples, but this is done on all algorithms and compared
-in the next section. 
-```{r}
-test.logreg <- confusionMatrix(predict(LogReg, test), test$cases)
-test.logreg
-```
-
-```{r, echo=FALSE}
-test.nb  <- confusionMatrix(predict(NB, test), test$cases)
-test.knn <- confusionMatrix(predict(kNN, test), test$cases)
-test.lda <- confusionMatrix(predict(LDA.2, test), test$cases)
-```
-
-## Summary
-Extract the accuracy values for each classifying algorithm and compare in a tabular format. 
+A resampling technique can be used to compare models. 
+(Ref: _Hothorn at al, "The design and analysis of benchmark experiments-
+Journal of Computational and Graphical Statistics (2005) vol 14 (3) pp 675-699)_)
 
 ```{r}
-Accuracy  <- c(test.logreg$overall[1], test.nb$overall[1])
-Algorithm <- c("Boosted Logistic Regression", "Naieve Bayes")
+rValues <- resamples(list(logreg=LogReg,lda1=LDA.1, lda2=LDA.2, lda3=LDA.3))
+bwplot(rValues,metric="ROC")            # boxplot
+dotplot(rValues,metric="ROC")           # dotplot
+splom(rValues,metric="ROC")
+```
+
+
+
+We can compare algorithms on their accuracy predicting the training
+data set. Here I create a confusion matrix by using each model to predict
+the class membership of data on the training data set. 
+```{r}
+acc.log <- confusionMatrix(predict(LogReg, train), train$cases)
+acc.lda <- confusionMatrix(predict(LDA.2, train), train$cases)
+acc.nb  <- confusionMatrix(predict(NB, train), train$cases)
+acc.dt  <- confusionMatrix(predict(DT, train), train$cases)
+acc.rf  <- confusionMatrix(predict(RF, train), train$cases)
+acc.knn <- confusionMatrix(predict(kNN, train), train$cases)
+```
+
+Ok so how do extract the accuracy values? Lets see what data is in
+the object created by the `confusionMatrix` function. 
+```{r}
+names(acc.log)
+names(acc.log$overall)
+```
+
+Now that I've identified that the value for Accuracy is the first element
+in the `$overall` list, I can extract these values and compare them in a 
+tabular format.
+
+```{r}
+Accuracy  <- c(acc.log$overall[1], acc.lda$overall[1], 
+               acc.nb$overall[1],  acc.dt$overall[1], 
+               acc.rf$overall[1],  acc.knn$overall[1])
+Algorithm <- c("Boosted Logistic Regression", "Linear Discriminant Analysis", 
+               "Naieve Bayes", "Decision Tree", "Random Forest", "k-Nearest neighbors")
 tab <- data.frame(Algorithm, Accuracy)
 ```
 
 ```{r, echo=FALSE, results='asis'}
 print(xtable(tab, digits=2), type='html')
 ```
+
+# Making predictions
+On the hold-out testing data set. 
+
+
+## Summary
+
 
 **Additional references**
 
